--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,13 +2,54 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-    font-family: "Inter";
+@font-face {
+    font-family: 'MainFont';
+    src: url('/fonts/Gilroy-UltraThin.ttf') format('opentype');
+    font-weight: 100;
+}
+@font-face {
+    font-family: 'MainFont';
+    src: url('/fonts/Gilroy-UltraLight.ttf') format('opentype');
+    font-weight: 200;
+}
+@font-face {
+    font-family: 'MainFont';
+    src: url('/fonts/Gilroy-Light.ttf') format('opentype');
+    font-weight: 300;
+}
+@font-face {
+    font-family: 'MainFont';
+    src: url('/fonts/Gilroy-Regular.ttf') format('opentype');
+    font-weight: 400; /* Medium weight */
+}
+@font-face {
+    font-family: 'MainFont';
+    src: url('/fonts/Gilroy-Medium.ttf') format('opentype');
+    font-weight: 500;
+}
+@font-face {
+    font-family: 'MainFont';
+    src: url('/fonts/Gilroy-SemiBold.ttf') format('opentype');
+    font-weight: 600;
+}
+@font-face {
+    font-family: 'MainFont';
+    src: url('/fonts/Gilroy-Bold.ttf') format('opentype');
+    font-weight: 700;
+}
+@font-face {
+    font-family: 'MainFont';
+    src: url('/fonts/Gilroy-Heavy.ttf') format('opentype');
+    font-weight: 800; /* Medium weight */
+}
+@font-face {
+    font-family: 'MainFont';
+    src: url('/fonts/Gilroy-Black.ttf') format('opentype');
+    font-weight: 900;
 }
 
-.heading {
-    font-family: "Bricolage Grotesque";
-    letter-spacing: -0.025em;
+* {
+    font-family: 'MainFont';
 }
 
 body {
