--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,40 +3,30 @@
 @tailwind utilities;
 
 html {
-	font-family:
-		'Inter',
-		system-ui,
-		-apple-system,
-		BlinkMacSystemFont,
-		'Segoe UI',
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		'Open Sans',
-		'Helvetica Neue',
-		sans-serif;
 	overflow-x: hidden;
-	background-color: #182818;
 }
 
-.paragraph {
-	font-family:
-		system-ui,
-		-apple-system,
-		BlinkMacSystemFont,
-		'Segoe UI',
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		'Open Sans',
-		'Helvetica Neue',
-		sans-serif;
+@font-face {
+    font-family: 'Time';
+    src: url('../fonts/times-now/TimesNow-ExtraLight.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
-.gradient-text {
-	background: linear-gradient(180deg, #ffffff, #c3f1d3, #d3ffd3);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+@font-face {
+    font-family: 'Time';
+    src: url('../fonts/times-now/TimesNow-Light.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Time';
+    src: url('../fonts/times-now/TimesNow-Bold.ttf') format('truetype');
+    font-weight: 800;
+    font-style: normal;
+}
+
+.times-new-font {
+    font-family: 'Time';
 }
